--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 body{
     color:black;
-    background-color: rgb(192, 176, 207);
+    background-color: rgb(193, 163, 222);
+}
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(2, 7, 13);
 }
