--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,9 @@ header {
     font-size: 32px;
     color: rgb(2, 7, 13);
 }
+section {
+    background: rgb(193, 163, 222);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+}
